Add Pixeldust font package
Adin's edit: User curated font selection!

Change-Id: I1440d6c51ee25c7e465e83b2f4ec5099f03e741d
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -98,4 +98,9 @@
     <!-- Whether or not swipe up gesture's opt-in setting is available on this device -->
     <bool name="config_swipe_up_gesture_setting_available">true</bool>
 
+    <!-- System font packages (overlay in vendor) -->
+    <string-array name="config_fontPackages" translatable="false">
+        <item>com.pixeldust.fonts</item>
+    </string-array>
+
 </resources>
