--- a/themes/Chocolate/Settings/res/values/colors.xml
+++ b/themes/Chocolate/Settings/res/values/colors.xml
@@ -31,4 +31,7 @@
     <color name="homepage_extensions_background">#ff473e38</color>
     <!-- End of dashboard/homepage icon background colors -->
 
+    <!-- Expanded desktop -->
+    <drawable name="expanded_item_bg_activated">#ff473e38</drawable>
+    <drawable name="expanded_item_bg">#ff473e38</drawable>
 </resources>
