--- a/themes/ShishuNights/Settings/res/values/colors.xml
+++ b/themes/ShishuNights/Settings/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="condition_card_background">@*android:color/black</color>
     <color name="suggestion_condition_background">#c016161c</color>
     <color name="suggestion_tile_background">@*android:color/transparent</color>
+    <!--<color name="material_grey_300">@*android:color/black</color> -->
+    <color name="search_bar_background_color">#c016161c</color>
+
+    <!-- Color for the background of the shortcut icons.-->
+    <color name="shortcut_background">@*android:color/black</color>
 </resources>
