--- a/themes/Dark/Settings/res/values/colors.xml
+++ b/themes/Dark/Settings/res/values/colors.xml
@@ -6,6 +6,8 @@
     <!-- Wifi network details -->
     <color name="wifi_details_icon_color">#8AFFFFFF</color>
 
+    <color name="search_bar_background_color">@*android:color/background_material_dark</color>
+
     <!-- Color for the background of the shortcut icons.-->
     <color name="shortcut_background">@*android:color/primary_device_default_dark</color>
 </resources>
