--- a/themes/Chocolate/System/res/values/styles.xml
+++ b/themes/Chocolate/System/res/values/styles.xml
@@ -7,6 +7,8 @@
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
         <item name="android:colorControlNormal">?android:attr/textColorPrimary</item>
         <item name="android:colorBackgroundFloating">@*android:color/black</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Settings" parent="@*android:style/Theme.Material">
         <item name="android:actionBarTheme">@*android:style/ThemeOverlay.DeviceDefault.ActionBar.Accent</item>
@@ -19,6 +21,9 @@
         <item name="android:colorControlNormal">@*android:color/accent_device_default_light</item>
         <item name="android:navigationBarColor">@*android:color/black</item>
         <item name="android:textColorPrimaryInverse">@*android:color/black</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
+
     </style>
     <style name="Theme.DeviceDefault.SearchBar" parent="@*android:style/Theme.Material.SearchBar">
         <item name="android:colorPrimary">#ff64564f</item>
@@ -48,18 +53,24 @@
         <item name="android:colorPrimaryDark">@*android:color/black</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
         <item name="android:colorBackground">@*android:color/black</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.Material.Settings.DialogWhenLarge.NoActionBar" parent="@*android:style/Theme.Material.DialogWhenLarge.NoActionBar">
         <item name="android:colorPrimary">@*android:color/black</item>
         <item name="android:colorPrimaryDark">@*android:color/black</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
         <item name="android:colorBackground">@*android:color/black</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.Material.Settings.Dialog.Presentation" parent="@*android:style/Theme.Material.Dialog.Presentation">
         <item name="android:colorPrimary">@*android:color/black</item>
         <item name="android:colorPrimaryDark">@*android:color/black</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
         <item name="android:colorBackground">@*android:color/black</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.QuickSettings.Dialog" parent="@*android:style/Theme.DeviceDefault.Dialog">
         <item name="android:colorPrimary">@*android:color/black</item>
@@ -67,6 +78,8 @@
         <item name="android:colorSecondary">@*android:color/black</item>
         <item name="android:colorBackground">@*android:color/black</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.Dialog" parent="@*android:style/Theme.Material.Dialog">
         <item name="android:windowTitleStyle">@*android:style/DialogWindowTitle.DeviceDefault</item>
@@ -84,6 +97,8 @@
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
         <item name="android:colorControlNormal">@*android:color/accent_device_default_light</item>
         <item name="android:colorBackground">@*android:color/black</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.Dialog.Alert" parent="@*android:style/Theme.Material.Dialog.Alert">
         <item name="android:windowTitleStyle">@*android:style/DialogWindowTitle.DeviceDefault</item>
@@ -118,6 +133,8 @@
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
         <item name="android:colorControlNormal">@*android:color/accent_device_default_light</item>
         <item name="android:colorBackground">@*android:color/black</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.Dialog.MinWidth" parent="@*android:style/Theme.Material.Dialog.MinWidth">
         <item name="android:colorPrimary">@*android:color/black</item>
@@ -131,6 +148,8 @@
         <item name="android:textColorHint">#ff999999</item>
         <item name="android:textColorAlertDialogListItem">#ffffffff</item>
         <item name="android:colorBackground">@*android:color/black</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.Dialog.NoActionBar" parent="@*android:style/Theme.Material.Dialog.NoActionBar">
         <item name="android:colorPrimary">@*android:color/black</item>
@@ -144,6 +163,8 @@
         <item name="android:textColorHint">#ff999999</item>
         <item name="android:textColorAlertDialogListItem">#ffffffff</item>
         <item name="android:colorBackground">@*android:color/black</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.Dialog.NoActionBar.MinWidth" parent="@*android:style/Theme.Material.Dialog.NoActionBar.MinWidth">
         <item name="android:colorPrimary">@*android:color/black</item>
@@ -157,6 +178,8 @@
         <item name="android:textColorHint">#ff999999</item>
         <item name="android:textColorAlertDialogListItem">#ffffffff</item>
         <item name="android:colorBackground">@*android:color/black</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.Dialog.FixedSize" parent="@*android:style/Theme.Material" >
         <item name="*android:windowFixedWidthMajor">@*android:dimen/dialog_fixed_width_major</item>
@@ -174,6 +197,8 @@
         <item name="android:textColorHint">#ff999999</item>
         <item name="android:textColorAlertDialogListItem">#ffffffff</item>
         <item name="android:colorBackground">@*android:color/black</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.Dialog.NoActionBar.FixedSize" parent="@*android:style/Theme.Material" >
         <item name="*android:windowFixedWidthMajor">@*android:dimen/dialog_fixed_width_major</item>
@@ -191,6 +216,8 @@
         <item name="android:textColorHint">#ff999999</item>
         <item name="android:textColorAlertDialogListItem">#ffffffff</item>
         <item name="android:colorBackground">@*android:color/black</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.DialogWhenLarge" parent="@*android:style/Theme.Material.DialogWhenLarge">
         <item name="android:colorPrimary">@*android:color/black</item>
@@ -204,6 +231,8 @@
         <item name="android:textColorHint">#ff999999</item>
         <item name="android:textColorAlertDialogListItem">#ffffffff</item>
         <item name="android:colorBackground">@*android:color/black</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.DialogWhenLarge.NoActionBar" parent="@*android:style/Theme.Material.DialogWhenLarge.NoActionBar">
         <item name="android:colorPrimary">@*android:color/black</item>
@@ -217,6 +246,8 @@
         <item name="android:textColorHint">#ff999999</item>
         <item name="android:textColorAlertDialogListItem">#ffffffff</item>
         <item name="android:colorBackground">@*android:color/black</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.Dialog.Presentation" parent="@*android:style/Theme.Material.Dialog.Presentation">
         <item name="android:colorPrimary">@*android:color/black</item>
@@ -230,6 +261,8 @@
         <item name="android:textColorHint">#ff999999</item>
         <item name="android:textColorAlertDialogListItem">#ffffffff</item>
         <item name="android:colorBackground">@*android:color/black</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
 
     <style name="Theme.DeviceDefault.Resolver" parent="@*android:style/Theme.Material">
@@ -246,15 +279,6 @@
         <item name="android:colorPrimaryDark">@*android:color/black</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
     </style>
-    <style name="Theme.DeviceDefault.Light.NoActionBar" parent="@*android:style/Theme.Material.NoActionBar">
-        <item name="android:colorPrimary">@*android:color/black</item>
-        <item name="android:colorPrimaryDark">@*android:color/black</item>
-        <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
-        <item name="android:colorSecondary">@*android:color/black</item>
-        <item name="android:colorControlNormal">@*android:color/accent_device_default_light</item>
-        <item name="android:textColorPrimaryInverse">@*android:color/black</item>
-        <item name="android:colorBackground">@*android:color/black</item>
-    </style>
     <style name="Theme.DeviceDefault.Light.Panel" parent="@*android:style/Theme.Material.Panel" >
         <item name="android:colorPrimary">@*android:color/black</item>
         <item name="android:colorPrimaryDark">@*android:color/black</item>
@@ -266,7 +290,3 @@
     </style>
 
 </resources>
-
-
-
-
