--- a/themes/Dark/System/res/values/styles.xml
+++ b/themes/Dark/System/res/values/styles.xml
@@ -7,6 +7,8 @@
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
         <item name="android:colorControlNormal">?android:attr/textColorPrimary</item>
         <item name="android:colorBackgroundFloating">@*android:color/material_grey_900</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Settings" parent="@*android:style/Theme.Material">
         <item name="android:actionBarTheme">@*android:style/ThemeOverlay.DeviceDefault.ActionBar.Accent</item>
@@ -18,36 +20,65 @@
         <item name="android:colorControlNormal">@*android:color/accent_device_default_light</item>
         <item name="android:navigationBarColor">@*android:color/primary_device_default_dark</item>
         <item name="android:textColorPrimaryInverse">@*android:color/background_material_dark</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
+
+    </style>
+    <style name="Theme.DeviceDefault.Light.SearchBar" parent="@*android:style/Theme.Material.SearchBar">
+        <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
+        <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
+        <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
     </style>
     <style name="Theme.Material.Settings.BaseDialog" parent="@*android:style/Theme.Material.BaseDialog">
         <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
         <item name="android:colorPrimaryDark">@*android:color/primary_device_default_dark</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
     </style>
     <style name="Theme.Material.Settings.CompactMenu" parent="@*android:style/Theme.Material.CompactMenu">
         <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
         <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
     </style>
     <style name="Theme.Material.Settings.Dialog.BaseAlert" parent="@*android:style/Theme.Material.Dialog.BaseAlert">
         <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
         <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
     </style>
     <style name="Theme.Material.Settings.DialogWhenLarge" parent="@*android:style/Theme.Material.DialogWhenLarge">
         <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
         <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.Material.Settings.DialogWhenLarge.NoActionBar" parent="@*android:style/Theme.Material.DialogWhenLarge.NoActionBar">
         <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
         <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.Material.Settings.Dialog.Presentation" parent="@*android:style/Theme.Material.Dialog.Presentation">
         <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
         <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
+    </style>
+    <style name="Theme.DeviceDefault.QuickSettings.Dialog" parent="@*android:style/Theme.DeviceDefault.Dialog">
+        <item name="android:colorPrimary">@*android:color/primary_dark_device_default_settings</item>
+        <item name="android:colorPrimaryDark">@*android:color/primary_device_default_settings</item>
+        <item name="android:colorSecondary">@*android:color/secondary_device_default_settings_light</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
+        <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.Dialog" parent="@*android:style/Theme.Material.Dialog">
         <item name="android:windowTitleStyle">@*android:style/DialogWindowTitle.DeviceDefault</item>
@@ -64,6 +95,26 @@
         <item name="android:colorSecondary">@*android:color/secondary_device_default_settings_light</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
         <item name="android:colorControlNormal">@*android:color/accent_device_default_light</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
+    </style>
+    <style name="Theme.DeviceDefault.Light.Dialog.Alert" parent="@*android:style/Theme.Material.Dialog.Alert">
+        <item name="android:windowTitleStyle">@*android:style/DialogWindowTitle.DeviceDefault</item>
+        <item name="android:windowAnimationStyle">@*android:style/Animation.DeviceDefault.Dialog</item>
+        <item name="android:buttonBarStyle">@*android:style/DeviceDefault.ButtonBar.AlertDialog</item>
+        <item name="android:borderlessButtonStyle">@*android:style/Widget.DeviceDefault.Button.Borderless.Small</item>
+        <item name="android:textColorPrimary">#ffffffff</item>
+        <item name="android:textColorSecondary">#fff5f5f5</item>
+        <item name="android:textColorTertiary">#b3f5f5f5</item>
+        <item name="android:textColorHint">#ff999999</item>
+        <item name="android:textColorAlertDialogListItem">#ffffffff</item>
+        <item name="android:colorPrimary">@*android:color/primary_dark_device_default_settings</item>
+        <item name="android:colorPrimaryDark">@*android:color/primary_device_default_settings</item>
+        <item name="android:colorSecondary">@*android:color/secondary_device_default_settings_light</item>
+        <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
+        <item name="android:colorControlNormal">@*android:color/accent_device_default_light</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
     </style>
     <style name="Theme.DeviceDefault.System" parent="@*android:style/Theme.Material">
         <item name="android:windowTitleStyle">@*android:style/DialogWindowTitle.DeviceDefault</item>
@@ -80,6 +131,9 @@
         <item name="android:colorSecondary">@*android:color/secondary_device_default_settings_light</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
         <item name="android:colorControlNormal">@*android:color/accent_device_default_light</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.Dialog.MinWidth" parent="@*android:style/Theme.Material.Dialog.MinWidth">
         <item name="android:colorPrimary">@*android:color/primary_dark_device_default_settings</item>
@@ -92,6 +146,9 @@
         <item name="android:textColorTertiary">#b3f5f5f5</item>
         <item name="android:textColorHint">#ff999999</item>
         <item name="android:textColorAlertDialogListItem">#ffffffff</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.Dialog.NoActionBar" parent="@*android:style/Theme.Material.Dialog.NoActionBar">
         <item name="android:colorPrimary">@*android:color/primary_dark_device_default_settings</item>
@@ -104,6 +161,24 @@
         <item name="android:textColorTertiary">#b3f5f5f5</item>
         <item name="android:textColorHint">#ff999999</item>
         <item name="android:textColorAlertDialogListItem">#ffffffff</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
+    </style>
+    <style name="Theme.DeviceDefault.Light.Dialog.NoActionBar.MinWidth" parent="@*android:style/Theme.Material.Dialog.NoActionBar.MinWidth">
+        <item name="android:colorPrimary">@*android:color/primary_dark_device_default_settings</item>
+        <item name="android:colorPrimaryDark">@*android:color/primary_device_default_settings</item>
+        <item name="android:colorSecondary">@*android:color/secondary_device_default_settings_light</item>
+        <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
+        <item name="android:colorControlNormal">@*android:color/accent_device_default_light</item>
+        <item name="android:textColorPrimary">#ffffffff</item>
+        <item name="android:textColorSecondary">#fff5f5f5</item>
+        <item name="android:textColorTertiary">#b3f5f5f5</item>
+        <item name="android:textColorHint">#ff999999</item>
+        <item name="android:textColorAlertDialogListItem">#ffffffff</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.Dialog.FixedSize" parent="@*android:style/Theme.Material" >
         <item name="*android:windowFixedWidthMajor">@*android:dimen/dialog_fixed_width_major</item>
@@ -120,6 +195,9 @@
         <item name="android:textColorTertiary">#b3f5f5f5</item>
         <item name="android:textColorHint">#ff999999</item>
         <item name="android:textColorAlertDialogListItem">#ffffffff</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.Dialog.NoActionBar.FixedSize" parent="@*android:style/Theme.Material" >
         <item name="*android:windowFixedWidthMajor">@*android:dimen/dialog_fixed_width_major</item>
@@ -136,6 +214,9 @@
         <item name="android:textColorTertiary">#b3f5f5f5</item>
         <item name="android:textColorHint">#ff999999</item>
         <item name="android:textColorAlertDialogListItem">#ffffffff</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.DialogWhenLarge" parent="@*android:style/Theme.Material.DialogWhenLarge">
         <item name="android:colorPrimary">@*android:color/primary_dark_device_default_settings</item>
@@ -148,6 +229,9 @@
         <item name="android:textColorTertiary">#b3f5f5f5</item>
         <item name="android:textColorHint">#ff999999</item>
         <item name="android:textColorAlertDialogListItem">#ffffffff</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.DialogWhenLarge.NoActionBar" parent="@*android:style/Theme.Material.DialogWhenLarge.NoActionBar">
         <item name="android:colorPrimary">@*android:color/primary_dark_device_default_settings</item>
@@ -160,6 +244,9 @@
         <item name="android:textColorTertiary">#b3f5f5f5</item>
         <item name="android:textColorHint">#ff999999</item>
         <item name="android:textColorAlertDialogListItem">#ffffffff</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.Light.Dialog.Presentation" parent="@*android:style/Theme.Material.Dialog.Presentation">
         <item name="android:colorPrimary">@*android:color/primary_dark_device_default_settings</item>
@@ -172,34 +259,38 @@
         <item name="android:textColorTertiary">#b3f5f5f5</item>
         <item name="android:textColorHint">#ff999999</item>
         <item name="android:textColorAlertDialogListItem">#ffffffff</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
     <style name="Theme.DeviceDefault.QuickSettings.Dialog" parent="@*android:style/Theme.DeviceDefault.Dialog">
         <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
         <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
         <item name="android:colorSecondary">@*android:color/secondary_device_default_settings</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
 
     <style name="Theme.DeviceDefault.Light.SearchBar" parent="@*android:style/Theme.Material.SearchBar">
         <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
         <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
 
     <style name="Theme.DeviceDefault.Light.Voice" parent="@*android:style/Theme.Material.Voice">
         <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
         <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
         <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
 
-    <style name="Theme.DeviceDefault.Light.NoActionBar" parent="@*android:style/Theme.Material.NoActionBar">
-        <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
-        <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
-        <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
-        <item name="android:colorSecondary">@*android:color/secondary_device_default_settings</item>
-        <item name="android:colorControlNormal">@*android:color/accent_device_default_light</item>
-        <item name="android:textColorPrimaryInverse">@*android:color/background_material_dark</item>
-    </style>
 
     <style name="Theme.DeviceDefault.Resolver" parent="@*android:style/Theme.Material">
         <item name="android:backgroundTint">@*android:color/background_material_dark</item>
@@ -223,6 +314,7 @@
         <item name="android:colorSecondary">@*android:color/secondary_device_default_settings</item>
         <item name="android:colorControlNormal">@*android:color/accent_device_default_light</item>
         <item name="android:textColorPrimaryInverse">@*android:color/background_material_dark</item>
+        <item name="android:colorBackground">@*android:color/material_grey_900</item>
     </style>
     <style name="Theme.DeviceDefault.Light.Dialog.Alert" parent="@*android:style/Theme.Material.Dialog.Alert">
         <item name="android:windowTitleStyle">@*android:style/DialogWindowTitle.DeviceDefault</item>
