--- a/themes/Dark/System/res/values/colors.xml
+++ b/themes/Dark/System/res/values/colors.xml
@@ -50,5 +50,12 @@
     <!-- QS edit page background color -->
     <color name="qs_edit_item_decoration_bg">@*android:color/secondary_device_default_settings</color>
 
-</resources>
+    <!-- QS Tiles Colors -->
+    <color name="qs_disabled">#cbcbcb</color>
+    <color name="qs_inactive">#cbcbcb</color>
+    <color name="qs_active">#212121</color>
+    <color name="qs_tile_disabled">#8c8c8c</color>
+    <color name="qs_tile_inactive">#8c8c8c</color>
+    <color name="qs_tile_active">#ffffff</color>
 
+</resources>
